--- a/payment.html
+++ b/payment.html
@@ -8,6 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <link rel="icon" href="data:,">
 </head>
 
@@ -21,22 +22,44 @@
     <div id="tableList" class="space-y-2"></div>
   </div>
 
-  <!-- รายละเอียดบิล -->
+  <!-- บิล -->
   <div class="col-span-9 bg-slate-800 rounded-xl p-4">
     <h2 class="font-bold mb-3">🧾 รายการอาหาร</h2>
 
     <div id="billItems" class="space-y-2 mb-4"></div>
 
-    <div class="border-t pt-4 flex justify-between items-center">
+    <div class="border-t pt-4 space-y-4">
       <div class="text-xl font-bold">
         รวมทั้งหมด: <span id="totalPrice">0</span> บาท
       </div>
 
+      <!-- วิธีชำระเงิน -->
+      <div class="flex gap-3">
+        <button id="cashBtn" class="bg-green-600 px-4 py-2 rounded">
+          💵 เงินสด
+        </button>
+        <button id="qrBtn" class="bg-blue-600 px-4 py-2 rounded">
+          📱 PromptPay
+        </button>
+      </div>
+
+      <!-- QR PromptPay -->
+      <div id="qrBox" class="hidden text-center">
+        <img
+          id="qrImg"
+          class="mx-auto w-48 bg-white p-2 rounded"
+          src=""
+        />
+        <p class="text-sm text-gray-300 mt-2">
+          ให้ลูกค้าสแกนเพื่อชำระเงิน
+        </p>
+      </div>
+
       <button
         id="payBtn"
-        class="bg-green-600 px-6 py-2 rounded disabled:opacity-40"
+        class="w-full bg-yellow-500 py-2 rounded disabled:opacity-40"
         disabled>
-        ✅ ชำระเงิน / ปิดบิล
+        ✅ ยืนยันชำระเงิน
       </button>
     </div>
   </div>
@@ -50,10 +73,14 @@ const sb = supabase.createClient(
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
 )
 
+// 🔧 ใส่เบอร์ PromptPay หรือเลขบัตร ปชช.
+const PROMPTPAY_ID = "0936494961"
+
 /* ================= STATE ================= */
 let currentOrder = null
 let productMap = {}
 let tableMap = {}
+let paymentMethod = null
 
 /* ================= LOAD MASTER ================= */
 async function loadProducts() {
@@ -71,7 +98,7 @@ async function loadOrders() {
   const { data } = await sb
     .from("orders")
     .select("*")
-    .neq("status", "paid")   // ⭐ แก้ตรงนี้
+    .neq("status", "paid")
     .order("created_at", { ascending: true })
 
   tableList.innerHTML = ""
@@ -88,6 +115,9 @@ async function loadOrders() {
 /* ================= LOAD BILL ================= */
 async function loadBill(order) {
   currentOrder = order
+  paymentMethod = null
+  qrBox.classList.add("hidden")
+  payBtn.disabled = true
 
   const { data } = await sb
     .from("order_items")
@@ -100,7 +130,6 @@ async function loadBill(order) {
   ;(data || []).forEach(it => {
     const p = productMap[it.product_id]
     if (!p) return
-
     const price = p.price * it.qty
     total += price
 
@@ -114,39 +143,64 @@ async function loadBill(order) {
   })
 
   totalPrice.textContent = total
+}
+
+/* ================= PAYMENT METHOD ================= */
+cashBtn.onclick = () => {
+  paymentMethod = "cash"
+  qrBox.classList.add("hidden")
   payBtn.disabled = false
 }
 
-/* ================= PAY ================= */
+qrBtn.onclick = () => {
+  paymentMethod = "promptpay"
+  qrBox.classList.remove("hidden")
+
+  // ใช้ API สร้าง QR PromptPay
+  qrImg.src =
+    `https://promptpay.io/${PROMPTPAY_ID}/${totalPrice.textContent}.png`
+
+  payBtn.disabled = false
+}
+
+/* ================= CONFIRM PAY ================= */
 payBtn.onclick = async () => {
-  if (!currentOrder) return
+  if (!currentOrder || !paymentMethod) return
 
   const confirm = await Swal.fire({
-    title: "ยืนยันชำระเงิน?",
+    title: "ยืนยันการชำระเงิน?",
+    text: paymentMethod === "cash"
+      ? "เงินสด"
+      : "PromptPay",
     icon: "question",
     showCancelButton: true,
-    confirmButtonText: "ชำระเงิน",
+    confirmButtonText: "ยืนยัน",
     cancelButtonText: "ยกเลิก"
   })
 
   if (!confirm.isConfirmed) return
 
-  // 1) ปิดบิล
+  // ปิดบิล
   await sb.from("orders")
-    .update({ status: "paid" })
+    .update({
+      status: "paid",
+      payment_method: paymentMethod,
+      paid_at: new Date()
+    })
     .eq("id", currentOrder.id)
 
-  // 2) คืนโต๊ะ
+  // คืนโต๊ะ
   await sb.from("tables")
     .update({ status: "available" })
     .eq("id", currentOrder.table_id)
 
-  Swal.fire("สำเร็จ", "ปิดบิลเรียบร้อย", "success")
+  Swal.fire("สำเร็จ", "ชำระเงินเรียบร้อย", "success")
 
   currentOrder = null
   billItems.innerHTML = ""
   totalPrice.textContent = 0
   payBtn.disabled = true
+  qrBox.classList.add("hidden")
 
   loadOrders()
 }
