--- a/payment.html
+++ b/payment.html
@@ -8,6 +8,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <link rel="icon" href="data:,">
 </head>
 
@@ -15,11 +16,13 @@
 
 <div class="max-w-6xl mx-auto grid grid-cols-12 gap-4">
 
+  <!-- โต๊ะ -->
   <div class="col-span-3 bg-slate-800 rounded-xl p-4">
     <h2 class="font-bold mb-3">🪑 โต๊ะที่พร้อมคิดเงิน</h2>
     <div id="tableList" class="space-y-2"></div>
   </div>
 
+  <!-- บิล -->
   <div class="col-span-9 bg-slate-800 rounded-xl p-4">
     <h2 class="font-bold mb-3">🧾 บิล</h2>
 
@@ -35,7 +38,12 @@
         <button id="qrBtn" class="bg-blue-600 px-4 py-2 rounded">📱 PromptPay</button>
       </div>
 
-      <button id="payBtn"
+      <div id="qrBox" class="hidden text-center">
+        <img id="qrImg" class="mx-auto w-48 bg-white p-2 rounded" />
+      </div>
+
+      <button
+        id="payBtn"
         class="w-full bg-yellow-500 py-2 rounded disabled:opacity-40"
         disabled>
         ✅ ยืนยันชำระเงิน
@@ -46,28 +54,32 @@
 </div>
 
 <script>
+/* ================= CONFIG ================= */
 const sb = supabase.createClient(
   "https://nvsptbbvxjulrpdebrhn.supabase.co",
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
 )
+const PROMPTPAY_ID = "0936494961"
 
+/* ================= STATE ================= */
 let currentOrderId = null
-let paymentMethod = null
+let currentTableId = null
 let productMap = {}
 let tableMap = {}
+let paymentMethod = null
 
-/* ===== master ===== */
+/* ================= MASTER ================= */
 async function loadProducts() {
   const { data } = await sb.from("products").select("id,name,price")
-  data.forEach(p => productMap[p.id] = p)
+  ;(data || []).forEach(p => productMap[p.id] = p)
 }
 
 async function loadTables() {
   const { data } = await sb.from("tables").select("id,table_no")
-  data.forEach(t => tableMap[t.id] = t.table_no)
+  ;(data || []).forEach(t => tableMap[t.id] = t.table_no)
 }
 
-/* ===== load tables ===== */
+/* ================= LOAD TABLES (ONLY OPEN ORDERS) ================= */
 async function loadOpenTables() {
   tableList.innerHTML = ""
 
@@ -76,75 +88,107 @@ async function loadOpenTables() {
     .select("id,table_id")
     .eq("status", "open")
 
-  orders.forEach(o => {
+  ;(orders || []).forEach(o => {
     const btn = document.createElement("button")
     btn.className = "w-full bg-blue-600 py-2 rounded"
     btn.textContent = `โต๊ะ ${tableMap[o.table_id]}`
-    btn.onclick = () => loadBill(o.id)
+    btn.onclick = () => loadBill(o.id, o.table_id)
     tableList.appendChild(btn)
   })
 }
 
-/* ===== load bill ===== */
-async function loadBill(orderId) {
+/* ================= LOAD BILL ================= */
+async function loadBill(orderId, tableId) {
   currentOrderId = orderId
+  currentTableId = tableId
   paymentMethod = null
   payBtn.disabled = true
+  qrBox.classList.add("hidden")
   billItems.innerHTML = ""
   let total = 0
 
+  // ดึงเฉพาะ item ที่ done
   const { data: items } = await sb
     .from("order_items")
     .select("*")
     .eq("order_id", orderId)
     .eq("status", "done")
 
-  items.forEach(it => {
+  ;(items || []).forEach(it => {
     const p = productMap[it.product_id]
+    if (!p) return
     const price = p.price * it.qty
     total += price
 
-    billItems.innerHTML += `
-      <div class="flex justify-between border-b py-1">
-        <div>${p.name} x ${it.qty}</div>
-        <div>${price} บาท</div>
-      </div>
+    const div = document.createElement("div")
+    div.className = "flex justify-between border-b border-slate-700 py-1"
+    div.innerHTML = `
+      <div>${p.name} x ${it.qty}</div>
+      <div>${price} บาท</div>
     `
+    billItems.appendChild(div)
   })
 
   totalPrice.textContent = total
 }
 
-/* ===== payment ===== */
+/* ================= PAYMENT METHOD ================= */
 cashBtn.onclick = () => {
   paymentMethod = "cash"
+  qrBox.classList.add("hidden")
   payBtn.disabled = false
 }
 
 qrBtn.onclick = () => {
   paymentMethod = "promptpay"
+  qrImg.src = `https://promptpay.io/${PROMPTPAY_ID}/${totalPrice.textContent}.png`
+  qrBox.classList.remove("hidden")
   payBtn.disabled = false
 }
 
+/* ================= PAY ================= */
 payBtn.onclick = async () => {
   if (!currentOrderId || !paymentMethod) return
 
-  await sb.from("orders")
-    .update({
-      status: "paid",
-      payment_method: paymentMethod,
-      paid_at: new Date()
-    })
-    .eq("id", currentOrderId)
+  const confirm = await Swal.fire({
+    title: "ยืนยันชำระเงิน?",
+    icon: "question",
+    showCancelButton: true,
+    confirmButtonText: "ชำระเงิน",
+    cancelButtonText: "ยกเลิก"
+  })
+  if (!confirm.isConfirmed) return
 
+  // ✅ เรียก function ปิดบิล (ปลอดภัยสุด)
+  const { error } = await sb.rpc("close_order", {
+    p_order_id: currentOrderId,
+    p_method: paymentMethod
+  })
+
+  if (error) {
+    Swal.fire("ผิดพลาด", error.message, "error")
+    return
+  }
+
+  // คืนโต๊ะ
   await sb.from("tables")
     .update({ status: "available" })
-    .eq("id", currentOrderId)
+    .eq("id", currentTableId)
 
   Swal.fire("สำเร็จ", "ปิดบิลเรียบร้อย", "success")
+
+  // reset state
+  currentOrderId = null
+  currentTableId = null
+  billItems.innerHTML = ""
+  totalPrice.textContent = 0
+  payBtn.disabled = true
+  qrBox.classList.add("hidden")
+
   loadOpenTables()
 }
 
+/* ================= INIT ================= */
 ;(async () => {
   await loadProducts()
   await loadTables()
